--- a/form.html
+++ b/form.html
@@ -3,6 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Form</title>
+	<script src="scriptform.js" defer></script>
 	<link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -11,7 +12,8 @@
     <h3>Której maszyny problem dotyczy?</h3>
         (wyświetlanych jest 10 pierwszych rekordów)
     <br><br>
-    <input type="text">
+    <input id="model" type="text">
+	<input id="SN" type="text">
 </div>
 <div class="form">
 	<h3>Opisz proszę jaki problem występuje</h3>
