--- a/form.html
+++ b/form.html
@@ -17,7 +17,7 @@
 </div>
 <div class="form">
 	<h3>Opisz proszę jaki problem występuje</h3>
-    <form name="Fuck">
+    <form name="Form">
         <div class="in">
         	<div class="inl">
         		<label for="choice">Czy można używać maszyny?</label>
