--- a/form.html
+++ b/form.html
@@ -12,8 +12,9 @@
     <h3>Której maszyny problem dotyczy?</h3>
         (wyświetlanych jest 10 pierwszych rekordów)
     <br><br>
-    <input id="model" type="text">
-	<input id="SN" type="text">
+    <div id=modelow>
+		
+	</div>
 </div>
 <div class="form">
 	<h3>Opisz proszę jaki problem występuje</h3>
